tests/invalid_submodules/sub_visibility_a2.err_exp2
sub_visibility_a2.m:022: In the first argument of function symbol `int_uq' of
sub_visibility_a2.m:022:   the type `int_uq'/0:
sub_visibility_a2.m:022:   error: the type [38;5;87m`foo'/0[39;49m is [38;5;203mundefined.[39;49m
sub_visibility_a2.m:022:   (Only [38;5;226mfully module qualified names[39;49m may refer to the
sub_visibility_a2.m:022:   entities defined in module [38;5;87m[39;49m
sub_visibility_a2.m:022:   [38;5;87m`sub_visibility_a2.sub2'.[39;49m)
sub_visibility_a2.m:035: In the first argument of function symbol `imp_uq' of
sub_visibility_a2.m:035:   the type `imp_uq'/0:
sub_visibility_a2.m:035:   error: the type [38;5;87m`foo'/0[39;49m is [38;5;203mundefined.[39;49m
sub_visibility_a2.m:035:   (Only [38;5;226mfully module qualified names[39;49m may refer to the
sub_visibility_a2.m:035:   entities defined in module [38;5;87m[39;49m
sub_visibility_a2.m:035:   [38;5;87m`sub_visibility_a2.sub2'.[39;49m)
`Mercury/ints/sub_visibility_a2.sub1.int' and
  `Mercury/int2s/sub_visibility_a2.sub1.int2' not written.
